# waybar-mpris-rs

./: Cargo.toml  config.ctl  music.jsonc
src/: lyric.rs  main.rs
